# cmacro-rs

./: Cargo.toml  ReadMe.md  rustfmt.toml
.github/workflows/: ci.yml
src/: asm.rs  binary_op.rs  context.rs  decl.rs  error.rs  expand.rs  expr.rs  fn_macro.rs  function_call.rs  function_decl.rs  identifier.rs  lib.rs  literal.rs  macro_body.rs  macro_set.rs  macro_sig.rs  statement.rs  stringify.rs  token.rs  tokens.rs  ty.rs  unary_op.rs  var_macro.rs
src/ast/: asm.rs  binary_expr.rs  binary_op.rs  cast.rs  decl.rs  expr.rs  function_call.rs  function_decl.rs  identifier.rs  identifier_expr.rs  literal.rs  macro_arg.rs  mod.rs  punctuation.rs  statement.rs  stringify.rs  ternary_expr.rs  test_macros.rs  tokens.rs  ty.rs  unary_expr.rs  unary_op.rs  var.rs  var_decl.rs
src/ast/literal/: char.rs  float.rs  int.rs  string.rs
src/codegen/: mod.rs
src/macro_set/: mod.rs
src/macro_token/: macros.rs  mod.rs
tests/: headers.rs
tests/fixtures/: arg_call.h  arg_call.rs  array_access.h  array_access.rs  asm.h  asm.rs  assign_pointer.h  assign_pointer.rs  cast_big_to_small.h  cast_big_to_small.rs  cast_multiplication.h  cast_multiplication.rs  cast_neg_to_pos.h  cast_shift.h  cast_shift.rs  chars.h  chars.rs  comments.h  comments.rs  concat.h  concat.rs  concat_int_suffix.h  concat_int_suffix.rs  concat_nested.h  concat_nested.rs  concat_non_ident.h  concat_non_ident.rs  deref.h  deref.rs  empty.h  empty.rs  empty_fn_macro.h  empty_fn_macro.rs  field_access.h  field_access.rs  file_line.h  file_line.rs  float.h  float.rs  fn_alias.h  (+41 more)
