[package]
name = "cmacro"
version = "0.1.0"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A library for parsing C macros and generating ."
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/cmacro"
repository = "https://github.com/reitermarkus/cmacro-rs"
homepage = "https://github.com/reitermarkus/cmacro-rs"

[dependencies]
nom = "7"
syn = "1"
proc-macro2 = "1"
quote = "1"
unicode-ident = "1"
