[package]
name = "cmacro"
version = "0.2.2"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"
description = "A library for parsing C macros and generating Rust code."
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
documentation = "https://docs.rs/cmacro"
repository = "https://github.com/reitermarkus/cmacro-rs"
homepage = "https://github.com/reitermarkus/cmacro-rs"

[dependencies]
nom = "7"
syn = "2"
proc-macro2 = "1"
quote = "1"
unicode-ident = "1"
semver = "1"

[dev-dependencies]
clang = { version = "2", features = ["runtime", "clang_10_0"] }
glob = "0.3"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
pretty_assertions = "1"
yansi = "1.0.0"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"
annotate-snippets = "0.9"

[[test]]
name = "headers"
harness = false

[patch.crates-io]
clang = { git = "https://github.com/reitermarkus/clang-rs", branch = "load-api" }
